# Thesis-Assistant

./: .gitignore  README.md
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  api.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/src/: backend_process.rs  main.rs
backend/: pyproject.toml
backend/src/knowledge_agent/: assistant.py  bibliography.py  config.py  db.py  discovery.py  import_service.py  job_service.py  main.py  models.py  pdf_text.py  providers.py  repositories.py  schemas.py  server.py  streaming.py  vector_index.py
backend/tests/: conftest.py  test_api.py  test_assistant.py  test_bibliography.py  test_database.py  test_discovery.py  test_health.py  test_import_service.py  test_pdf_text.py  test_providers.py  test_server.py  test_smoke_real_pdf.py  test_streaming.py  test_vector_index.py
docs/superpowers/: mvp-acceptance.md
docs/superpowers/plans/: 2026-06-05-assistant-sse-streaming-plan.md  2026-06-05-background-jobs-plan.md  2026-06-05-bibliography-import-export-plan.md  2026-06-05-citation-page-navigation-plan.md  2026-06-05-crossref-semantic-scholar-discovery-plan.md  2026-06-05-desktop-backend-launch-plan.md  2026-06-05-desktop-ui-redesign-plan.md  2026-06-05-external-discovery-open-pdf-plan.md  2026-06-05-final-mvp-blockers-plan.md  2026-06-05-knowledge-agent-foundation-plan.md  2026-06-05-library-folder-import-plan.md  (+13 more)
scripts/: build-release.ps1  dev-backend.ps1  dev-desktop.ps1  smoke_real_pdf.py
(+12 files in other folders)
